--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -7,28 +7,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
-   <header>
-        <div class="main-nav">
-            <div class="logo">
-                <img src="assets/img/Logo.svg" alt="">
-            </div>
-            <div class="nav">
-                <ul>
-                    <li><a href="">Product</a></li>
-                    <li><a href="">Customers</a></li>
-                    <li><a href="">Pricing</a></li>
-                    <li><a href="">Resources</a></li>
-                </ul>  
-            </div>
-            <div class="sign-up">
-                <button type="button">Sign In</button>
-                <button type="submit">Sign Up</button>
+    <header>
+        <div class="container-nav">
+            <div class="main-nav">
+                <div class="logo">
+                    <img src="assets/img/Logo.svg" alt="">
+                </div>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="">Product</a></li>
+                        <li><a href="">Customers</a></li>
+                        <li><a href="">Pricing</a></li>
+                        <li><a href="">Resources</a></li>
+                    </ul>  
+                </nav>
+                <div class="sign-up">
+                    <button type="button" class="sign-in">Sign In</button>
+                    <button type="button">Sign Up</button>
+                </div>
             </div>
         </div>
-   </header>
+    </header>
    <main>
     <section class="superpowers">
         <div class="container">
@@ -44,6 +46,75 @@
             </div>
         </div>
     </section>
+    <!-- <section>
+        <div class="container-tools">
+            <h1>We design tools to unveil your superpowers</h1>
+            <div class="card">
+                <div class="list">
+                    <ul>
+                        <li>
+                            <div class="logo-list">
+                                <span class="image">
+                                    <img src="assets/img/.svg" alt="">
+                                </span>
+                            </div>
+                            <div class="text-list">
+                                <h2>First click tests</h2>
+                                <span>While most people enjoy casino gambling</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="logo-list-design">
+                                <span>
+                                    <img src="" alt="">
+                                </span>
+                            </div>
+                            <div class="text-list">
+                                <h2></h2>
+                                <span></span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <footer>
+        <div class="container-footer">
+            <div class="footer">
+                    <img src="assets/img/Logo.svg" alt="">
+                <div class="footer-text">
+                    <h2>Quick Links</h2>
+                    <ul>
+                        <li>About Us</li>
+                        <li>Blog</li>
+                        <li>Contact</li>
+                        <li>FAQ</li>
+                    </ul>
+                </div>
+                <div class="footer-text">
+                    <h2>Legal Stuff</h2>
+                    <ul>
+                        <li>Disclaimer</li>
+                        <li>Financing</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms of Service</li>
+                    </ul>
+                </div>
+                <div class="footer-form">
+                    <h2>Knowing you're always on the best energy deal.</h2>
+                    <form>
+                        <div class="tel">
+                            <input type="tel" placeholder="Enter your phone Number">
+                        </div>
+                        <div class="btn">
+                            <button type="submit">Sign up Now</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
    </main> 
 </body>
 </html>
