--- a/08-our-team/index.html
+++ b/08-our-team/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2? родина= Raleway:wght@400;500;700;900 & display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
     <title>Document</title>
 </head>
 <body>
