--- a/08-our-team/index.html
+++ b/08-our-team/index.html
@@ -16,12 +16,12 @@
                 <h2>The geniuses behind our work</h2>
                 <h1>Our team</h1>
                 <div class="divider">
-                    <img src="image/bonfire-sharp 1.jpg" alt="">
+                    <img src="assets/image/bonfire-sharp 1.jpg" alt="">
                 </div>
             </div>
             <div class="block">
                 <div class="left">
-                    <div class="image"><img src="image/photo.jpg" alt=""></div>
+                    <div class="image"><img src="assets/image/photo.jpg" alt=""></div>
                 </div>
                 <div class="right">
                     <div class="info-title">
@@ -30,10 +30,10 @@
                     </div>
                     <div class="social">
                         <ul>
-                            <li><img src="image/facebook.png" alt=""></li>
-                            <li><img src="image/twitter.png" alt=""></li>
-                            <li><img src="image/google+.png" alt=""></li>
-                            <li><img src="image/linkedin.png" alt=""></li>
+                            <li><img src="assets/image/facebook.png" alt=""></li>
+                            <li><img src="assets/image/twitter.png" alt=""></li>
+                            <li><img src="assets/image/google+.png" alt=""></li>
+                            <li><img src="assets/image/linkedin.png" alt=""></li>
                         </ul>
                     </div>
                     <div class="info-text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.</p></div>
