added link 05-2-shopping

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="04-form/index.html">Lesson 04-form</a>
         </li>
         <li>
-            <a href="05-css-shopping-list/">Lesson 05-css-shopping-list</a>
+            <a href="05-2-shopping-list/index.html">Lesson 05-2-css-shopping-list</a>
         </li>
         <li>
             <a href="06-css-weather/index.html">Lesson 06-CSS-Weather</a>
