--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="05-2-shopping-list/index.html">Lesson 05-2-css-shopping-list</a>
         </li>
         <li>
-            <a href="06-css-weather/index.html">Lesson 06-CSS-Weather</a>
+            <a href="06-2-weather/index.html">Lesson 06-2-CSS-Weather</a>
         </li>
         <li>
             <a href="07-producly/index.html">Lesson 07-Produclu</a>
