added decore line

--- a/08-our-team/index.html
+++ b/08-our-team/index.html
@@ -15,29 +15,29 @@
             <div class="title">
                 <h2>The geniuses behind our work</h2>
                 <h1>Our team</h1>
-                <div class="divider">
-                    <img src="assets/image/bonfire-sharp 1.jpg" alt="">
-                </div>
+                <img src="assets/image/bonfire-sharp 1.jpg" alt="">
             </div>
             <div class="block">
                 <div class="left">
                     <div class="image"><img src="assets/image/photo.jpg" alt=""></div>
                 </div>
+                <div class="center"></div>
                 <div class="right">
                     <div class="info-title">
                         <h2>Sahariar Kabir</h2>
+                        <div class="divider"></div>
                         <p class="subtitle">Frontend Developer</p>
                     </div>
                     <div class="social">
                         <ul>
-                            <li><img src="assets/image/facebook.png" alt=""></li>
-                            <li><img src="assets/image/twitter.png" alt=""></li>
-                            <li><img src="assets/image/google+.png" alt=""></li>
-                            <li><img src="assets/image/linkedin.png" alt=""></li>
+                            <li><a href="https://www.facebook.com/" target="_blank"><img src="assets/image/facebook.png" alt=""></a></li>
+                            <li><a href="https://twitter.com/i/flow/login" target="_blank"><img src="assets/image/twitter.png" alt=""></a></li>
+                            <li><a href="https://www.google.com.ua/?hl=uk" target="_blank"><img src="assets/image/google+.png" alt=""></a></li>
+                            <li><a href="https://www.linkedin.com/" target="_blank"><img src="assets/image/linkedin.png" alt=""></a></li>
                         </ul>
                     </div>
                     <div class="info-text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.</p></div>
-                    <div class="decore"></div>
+                    <div class="decore"><img src="assets/image/decore.png" alt=""></div>
                     <div class="button"> <button type="button">view profile</button> </div>
                 </div>
             </div>
