--- a/08-our-team/index.html
+++ b/08-our-team/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https: //fonts.googleapis.com/css2? родина= Raleway:wght@400;500;700;900 & display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2? родина= Raleway:wght@400;500;700;900 & display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.min.css">
     <title>Document</title>
 </head>
@@ -15,7 +15,7 @@
             <div class="title">
                 <h2>The geniuses behind our work</h2>
                 <h1>Our team</h1>
-                <img src="assets/image/bonfire-sharp 1.jpg" alt="">
+                <img src="assets/image/bonfire-sharp-1.jpg" alt="">
             </div>
             <div class="block">
                 <div class="left">
