added section 07 style 07-prodycli 08-our-team

--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="container-nav">
             <div class="main-nav">
                 <div class="logo">
-                    <img src="assets/img/Logo.svg" alt="">
+                    <a href="#"><img src="assets/img/Logo.svg" alt=""></a>
                 </div>
                 <nav class="nav">
                     <ul>
-                        <li><a href="">Product</a></li>
-                        <li><a href="">Customers</a></li>
-                        <li><a href="">Pricing</a></li>
-                        <li><a href="">Resources</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">Customers</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Resources</a></li>
                     </ul>  
                 </nav>
                 <div class="sign-up">
@@ -46,9 +46,11 @@
             </div>
         </div>
     </section>
-    <!-- <section>
+    <section>
         <div class="container-tools">
-            <h1>We design tools to unveil your superpowers</h1>
+            <div class="subtitle">
+                <h1>We design tools to unveil your superpowers</h1>
+            </div>
             <div class="card">
                 <div class="list">
                     <ul>
@@ -64,41 +66,66 @@
                             </div>
                         </li>
                         <li>
-                            <div class="logo-list-design">
-                                <span>
-                                    <img src="" alt="">
+                            <div class="logo-list">
+                                <span class="image designe">
+                                    <img src="assets/img/.svg" alt="">
                                 </span>
                             </div>
                             <div class="text-list">
-                                <h2></h2>
-                                <span></span>
+                                <h2>Design surveys</h2>
+                                <span>Sports betting, lottery and bingo playing for the fun</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="logo-list ">
+                                <span class="image tests">
+                                    <img src="assets/img/.svg" alt="">
+                                </span>
+                            </div>
+                            <div class="text-list">
+                                <h2>Preference tests</h2>
+                                <span>The Myspace page defines the individual.</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="logo-list">
+                                <span class="image second-tests">
+                                    <img src="assets/img/.svg" alt="">
+                                </span>
+                            </div>
+                            <div class="text-list">
+                                <h2>Five second tests</h2>
+                                <span>Personal choices and the overall personality of the person.</span>
                             </div>
                         </li>
                     </ul>
                 </div>
             </div>
+            <div class="now">
+                <button>Sign up Now</button>
+            </div>
         </div>
-    </section> -->
+    </section>
     <footer>
         <div class="container-footer">
             <div class="footer">
-                    <img src="assets/img/Logo.svg" alt="">
+                    <a href="#header"><img src="assets/img/Logo.svg" alt=""></a>
                 <div class="footer-text">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li>About Us</li>
-                        <li>Blog</li>
-                        <li>Contact</li>
-                        <li>FAQ</li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="footer-text">
                     <h2>Legal Stuff</h2>
                     <ul>
-                        <li>Disclaimer</li>
-                        <li>Financing</li>
-                        <li>Privacy Policy</li>
-                        <li>Terms of Service</li>
+                        <li><a href="#">Disclaimer</a></li>
+                        <li><a href="#">Financing</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div class="footer-form">
