--- a/08-our-team/index.html
+++ b/08-our-team/index.html
@@ -19,7 +19,11 @@
             </div>
             <div class="block">
                 <div class="left">
-                    <div class="image"><img src="assets/image/photo.jpg" alt=""></div>
+                    <div class="image">
+                        <div class="photo">
+                            <img src="assets/image/photo.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div class="center"></div>
                 <div class="right">
