added font 06 08 fixed 07

--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productly</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
@@ -57,7 +57,7 @@
                         <li>
                             <div class="logo-list">
                                 <span class="image">
-                                    <img src="assets/img/.svg" alt="">
+                                    <img src="assets/img/cursor.svg" alt="">
                                 </span>
                             </div>
                             <div class="text-list">
@@ -68,7 +68,7 @@
                         <li>
                             <div class="logo-list">
                                 <span class="image designe">
-                                    <img src="assets/img/.svg" alt="">
+                                    <img src="assets/img/snake.svg" alt="">
                                 </span>
                             </div>
                             <div class="text-list">
@@ -79,7 +79,7 @@
                         <li>
                             <div class="logo-list ">
                                 <span class="image tests">
-                                    <img src="assets/img/.svg" alt="">
+                                    <img src="assets/img/heart.svg" alt="">
                                 </span>
                             </div>
                             <div class="text-list">
@@ -90,7 +90,7 @@
                         <li>
                             <div class="logo-list">
                                 <span class="image second-tests">
-                                    <img src="assets/img/.svg" alt="">
+                                    <img src="assets/img/clock.svg" alt="">
                                 </span>
                             </div>
                             <div class="text-list">
@@ -106,7 +106,8 @@
             </div>
         </div>
     </section>
-    <footer>
+   </main> 
+   <footer>
         <div class="container-footer">
             <div class="footer">
                     <a href="#header"><img src="assets/img/Logo.svg" alt=""></a>
@@ -142,6 +143,5 @@
             </div>
         </div>
     </footer>
-   </main> 
 </body>
 </html>
