--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
             <a href="04-form/index.html">Lesson 04-form</a>
         </li>
         <li>
+            <a href="05-css-shopping-list/index.html">Lesson 05-css-shopping-list</a>
+        </li>
+        <li>
             <a href="05-2-shopping-list/index.html">Lesson 05-2-css-shopping-list</a>
+        </li>
+        <li>
+            <a href="06-css-weather/index.html">Lesson 06-css-weather</a>
         </li>
         <li>
             <a href="06-2-weather/index.html">Lesson 06-2-CSS-Weather</a>
@@ -31,6 +37,9 @@
         </li>
         <li>
             <a href="08-our-team/index.html"> Lesson 08-Our-TSeam</a>
+        </li>
+        <li>
+            <a href="09-practice/index.html">Lesson 09-ITlife</a>
         </li>
     </ul>
 </body>
