--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -24,9 +24,9 @@
                         <li><a href="#">Resources</a></li>
                     </ul>  
                 </nav>
-                <div class="sign-up">
+                <div class="sign">
                     <button type="button" class="sign-in">Sign In</button>
-                    <button type="button">Sign Up</button>
+                    <button type="button" class="sign-up">Sign Up</button>
                 </div>
             </div>
         </div>
