--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
-    <header id="header">
-        <div class="container-nav">
+    <header class="header" id="header">
+        <div class="container">
             <div class="main-nav">
                 <div class="logo">
                     <a href="#"><img src="assets/img/Logo.svg" alt=""></a>
@@ -46,8 +46,8 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container-tools">
+    <section class="tools">
+        <div class="container">
             <div class="subtitle">
                 <h1>We design tools to unveil your superpowers</h1>
             </div>
@@ -107,8 +107,8 @@
         </div>
     </section>
    </main> 
-   <footer>
-        <div class="container-footer">
+   <footer class="footer">
+        <div class="container">
             <div class="footer">
                     <a href="#header"><img src="assets/img/Logo.svg" alt=""></a>
                 <div class="footer-text">
