--- a/07-producly/index.html
+++ b/07-producly/index.html
@@ -110,7 +110,9 @@
    <footer class="footer">
         <div class="container">
             <div class="footer">
+                <div class="footer-logo">
                     <a href="#header"><img src="assets/img/Logo.svg" alt=""></a>
+                </div>
                 <div class="footer-text">
                     <h2>Quick Links</h2>
                     <ul>
