--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <li>
             <a href="09-practice/index.html">Lesson 09-ITlife</a>
         </li>
+        <li>
+            <a href="10-grid/index.html"> Lesson 10-grid</a>
+        </li>
     </ul>
 </body>
 </html>
