--- a/10-grid/index.html
+++ b/10-grid/index.html
@@ -16,7 +16,7 @@
                 <div class="title">
                     <h1>Architectural Photography</h1>
                 </div>
-                <div class="city">
+                <div class="photo-list">
                     <div class="photo el-1"><img src="assets/image/city-1.png" alt=""></div>
                     <div class="photo el-2 colspan"><img src="assets/image/city2.png" alt=""></div>
                     <div class="photo el-3 colspan"><img src="assets/image/city3.png" alt=""></div>
@@ -29,10 +29,10 @@
                 <div class="title">
                     <h1>Still Life Photography</h1>
                 </div>
-                <div class="gallery">
+                <div class="photo-list">
                     <div class="photo el-1"><img src="assets/image/photo1.png" alt=""></div>
                     <div class="photo el-2 colspan"><img src="assets/image/photo2.png" alt=""></div>
-                    <div class="photo el-3"><img src="assets/image/photo3.png" alt=""></div>
+                    <div class="photo el-3 area"><img src="assets/image/photo3.png" alt=""></div>
                     <div class="photo el-4 rowspan"><img src="assets/image/photo4.png" alt=""></div>
                     <div class="photo el-5 colspan"><img src="assets/image/photo5.png" alt=""></div>
                     <div class="photo el-6"><img src="assets/image/photo6.png" alt=""></div>
@@ -42,7 +42,7 @@
                 <div class="title">
                     <h1>Portrait and Fashion Photography</h1>
                 </div>
-                <div class="portrait">
+                <div class="photo-list">
                     <div class="photo el-1"><img src="assets/image/image-1.png" alt=""></div>
                     <div class="photo el-2 rowspan"><img src="assets/image/image2.png" alt=""></div>
                     <div class="photo el-3"><img src="assets/image/image3.png" alt=""></div>
