--- a/11-font/index.html
+++ b/11-font/index.html
@@ -13,7 +13,7 @@
                 <span><a href="#">ENG</a></span>
                 <nav>
                     <ul>
-                        <li><a href="#">Documentation   </a></li>
+                        <li><a href="#">Documentation</a></li>
                         <li>/</li>
                         <li><a href="#">Who's using</a></li>
                     </ul>
@@ -24,26 +24,34 @@
                 </div>
         </div>
     </header>
-    <main>
-        <div class="container">
-            <div class="chapter">
+    <div class="container colums">
+        <aside>
+            <ul>
+                <li><a href="#Introduction">Introduction</a></li>
+                <li><a href="#components">Core components</a></li>
+                <li><a href="#fundamentals">React fundamentals</a></li>
+                <li><a href="#Handling">Handling text input</a></li>
+            </ul>
+        </aside>
+        <main>
+            <div class="chapter" id="Introduction">
                 <div class="title">
-                    <h1>Introduction</h1>
-                    <small>Chapter 1</small>
+                    <h2>Introduction</h2>
+                    <sup>Chapter 1</sup>
                 </div>
-                <p>Welcome to the very start of your React Native journey! If you're looking for environment setup instructions, they've moved to <span class="line">their own section</span>. Continue reading for an introduction to the documentation, Native Components, React, and more!</p>
+                <p >Welcome to the very start of your React Native journey! If you're looking for environment setup instructions, they've moved to <span class="line">their own section</span>. Continue reading for an introduction to the documentation, Native Components, React, and more!</p>
             </div>
-            <div class="chapter">
+            <div class="chapter" id="components">
                 <div class="title">
-                    <h1>Core components</h1>
-                    <small>Chapter 2</small>
+                    <h2>Core components</h2>
+                    <sup>Chapter 2</sup>
                 </div>
                 <p>React Native is an open source framework for building Android and iOS applications using React and the app platform’s native capabiles. With React Native, you use JavaScript to access your platform’s APIs as well as to describe the appearance and behavior of your UI using React components: <span class="italic">bundles of reusable, nestable code</span>. You can learn more about React in the next section. But first, let’s cover how components work in React Native.</p>
             </div>
-            <div class="chapter">
+            <div class="chapter" id="fundamentals">
                 <div class="title">
-                    <h1>React fundamentals</h1>
-                    <small>Chapter 3</small>
+                    <h2>React fundamentals</h2>
+                    <sup>Chapter 3</sup>
                 </div>
                 <p>React Native runs on <span class="line">React</span>, a popular open source library for building user interfaces with JavaScript. To make the most of React Native, it helps to understand React itself. This section can get you started or can serve as a refresher course.</p>
                 <p>We’re going to cover the core concepts behind React:</p>
@@ -52,15 +60,15 @@
                 <p><span class="fw700">+ props.</span> Props is short for “properties”.</p>
                 <p><span class="fw700">+ state.</span> While you can think of props as arguments you use to configure how components render, state is like a component’s personal data storage. State is useful for handling data that changes over time or that comes from user interaction. State gives your components memory!</p>
             </div>
-            <div class="chapter">
+            <div class="chapter" id="Handling">
                 <div class="title">
-                    <h1>Handling text input</h1>
-                    <small>Chapter 4</small>
+                    <h2>Handling text input</h2>
+                    <sup>Chapter 4</sup>
                 </div>
                 <p>TextInput is a Core Component that allows the user to enter text. It has an <span class="italic">onChangeText</span> prop that takes a function to be called every time the text changed, and an onSubmitEditing prop that takes a function to be called when the text is submitted.</p>
                 <p>For example, let's say that as the user types, you're translating their words into a different language. In this new language, every single word is written the same way: 🍕. So the sentence "Hello there Bob" would be translated as "🍕 🍕".</p>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 </html>
