added 10-grid icon, 11-font who's using

--- a/10-grid/index.html
+++ b/10-grid/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
@@ -17,12 +17,48 @@
                     <h1>Architectural Photography</h1>
                 </div>
                 <div class="photo-list">
-                    <div class="photo el-1"><img src="assets/image/city-1.png" alt=""></div>
-                    <div class="photo el-2 colspan"><img src="assets/image/city2.png" alt=""></div>
-                    <div class="photo el-3 colspan"><img src="assets/image/city3.png" alt=""></div>
-                    <div class="photo el-4"><img src="assets/image/city4.png" alt=""></div>
-                    <div class="photo el-5"><img src="assets/image/city5-1.png" alt=""></div>
-                    <div class="photo el-6 colspan"><img src="assets/image/city6.png" alt=""></div>
+                    <div class="photo el-1">
+                        <img src="assets/image/city-1.png" alt="">
+                        <div class="info">
+                            <div class="name">Jezael Melgoza</div>
+                            <div class="date">5 June 2020</div>
+                        </div>
+                    </div>
+                    <div class="photo el-2 colspan">
+                        <img src="assets/image/city2.png" alt="">
+                        <div class="info">
+                            <div class="name">Tom W</div>
+                            <div class="date">30 March 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-3 colspan">
+                        <img src="assets/image/city3.png" alt="">
+                        <div class="info">
+                            <div class="name">Johan Mouchet</div>
+                            <div class="date">14 August 2019</div>
+                        </div>
+                    </div>
+                    <div class="photo el-4">
+                        <img src="assets/image/city4.png" alt="">
+                        <div class="info">
+                            <div class="name">Federico Di Dio</div>
+                            <div class="date">29 October 2020</div>
+                        </div>
+                    </div>
+                    <div class="photo el-5">
+                        <img src="assets/image/city5-1.png" alt="">
+                        <div class="info">
+                            <div class="name">Casey Horner</div>
+                            <div class="date">9 July 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-6 colspan">
+                        <img src="assets/image/city6.png" alt="">
+                        <div class="info">
+                            <div class="name">Alexander Rotker</div>
+                            <div class="date">22 April 2022</div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="photo-gallery">
@@ -30,12 +66,48 @@
                     <h1>Still Life Photography</h1>
                 </div>
                 <div class="photo-list">
-                    <div class="photo el-1"><img src="assets/image/photo1.png" alt=""></div>
-                    <div class="photo el-2 colspan"><img src="assets/image/photo2.png" alt=""></div>
-                    <div class="photo el-3 area"><img src="assets/image/photo3.png" alt=""></div>
-                    <div class="photo el-4 rowspan"><img src="assets/image/photo4.png" alt=""></div>
-                    <div class="photo el-5 colspan"><img src="assets/image/photo5.png" alt=""></div>
-                    <div class="photo el-6"><img src="assets/image/photo6.png" alt=""></div>
+                    <div class="photo el-1">
+                        <img src="assets/image/photo1.png" alt="">
+                        <div class="info">
+                            <div class="name">Robert Lukeman</div>
+                            <div class="date">30 June 2020</div>
+                        </div>
+                    </div>
+                    <div class="photo el-2 colspan">
+                        <img src="assets/image/photo2.png" alt="">
+                        <div class="info">
+                            <div class="name">Sean Oulashin</div>
+                            <div class="date">5 September 2019</div>
+                        </div>
+                    </div>
+                    <div class="photo el-3 area">
+                        <img src="assets/image/photo3.png" alt="">
+                        <div class="info">
+                            <div class="name">John Fowler</div>
+                            <div class="date">10 August 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-4 rowspan">
+                        <img src="assets/image/photo4.png" alt="">
+                        <div class="info">
+                            <div class="name">Dave Hoefler</div>
+                            <div class="date">13 February 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-5 colspan">
+                        <img src="assets/image/photo5.png" alt="">
+                        <div class="info">
+                            <div class="name">Léonard Cotte</div>
+                            <div class="date">5 September 2019</div>
+                        </div>
+                    </div>
+                    <div class="photo el-6">
+                        <img src="assets/image/photo6.png" alt="">
+                        <div class="info">
+                            <div class="name">Rob Mulally</div>
+                            <div class="date">30 May 2020</div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="photo-portrait">
@@ -43,16 +115,156 @@
                     <h1>Portrait and Fashion Photography</h1>
                 </div>
                 <div class="photo-list">
-                    <div class="photo el-1"><img src="assets/image/image-1.png" alt=""></div>
-                    <div class="photo el-2 rowspan"><img src="assets/image/image2.png" alt=""></div>
-                    <div class="photo el-3"><img src="assets/image/image3.png" alt=""></div>
-                    <div class="photo el-4"><img src="assets/image/image4.png" alt=""></div>
-                    <div class="photo el-5 rowspan"><img src="assets/image/image5.png" alt=""></div>
-                    <div class="photo el-6 rowspan"><img src="assets/image/image6.png" alt=""></div>
-                    <div class="photo el-7"><img src="assets/image/image7.png" alt=""></div>
-                    <div class="photo el-8 colspan"><img src="assets/image/image8.png" alt=""></div>
-                    <div class="photo el-9 colspan"><img src="assets/image/image9.png" alt=""></div>
-                    <div class="photo el-10"><img src="assets/image/image10.png" alt=""></div>
+                    <div class="photo el-1">
+                        <img src="assets/image/image-1.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Pooja Chaudhary</div>
+                            <div class="date">30 June 2020</div>
+                        </div>    
+                    </div>
+                    <div class="photo el-2 rowspan">
+                        <img src="assets/image/image2.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Dom Hill</div>
+                            <div class="date">13 October 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-3">
+                        <img src="assets/image/image3.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Seth Doyle</div>
+                            <div class="date">30 May 2020</div>
+                        </div>                    
+                    </div>
+                    <div class="photo el-4">
+                        <img src="assets/image/image4.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">devn</div>
+                            <div class="date">30 June 2020</div>
+                        </div>                    
+                    </div>
+                    <div class="photo el-5 rowspan">
+                        <img src="assets/image/image5.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Noah Buscher</div>
+                            <div class="date">13 February 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-6 rowspan">
+                        <img src="assets/image/image6.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Sincerely Media</div>
+                            <div class="date">7 January 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-7">
+                        <img src="assets/image/image7.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Seth Doyle</div>
+                            <div class="date">30 June 2020</div>
+                        </div>
+                    </div>
+                    <div class="photo el-8 colspan">
+                        <img src="assets/image/image8.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Melissa Askew</div>
+                            <div class="date">29 April 2021</div>
+                        </div>
+                    </div>
+                    <div class="photo el-9 colspan">
+                        <img src="assets/image/image9.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Brooke Cagle</div>
+                            <div class="date">5 August 2019</div>
+                        </div>
+                    </div>
+                    <div class="photo el-10">
+                        <img src="assets/image/image10.png" alt="">
+                        <div class="icons">
+                            <div class="icon">
+                                <i class="icon-heart"></i>
+                            </div>
+                            <div class="icon">
+                                <i class="icon-download"></i>
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="name">Clem Onojeghuo</div>
+                            <div class="date">1 July 2021</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
