--- a/11-font/index.html
+++ b/11-font/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
-<body>
+<body class="body">
     <header class="header">
         <div class="container">
             <div class="eng">
@@ -15,13 +15,13 @@
                     <ul>
                         <li><a href="#">Documentation</a></li>
                         <li>/</li>
-                        <li><a href="#">Who's using</a></li>
+                        <li><a href="assets/11-who's using/index.html" target="_blank">Who's using</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="logo">
-                    <a class="logo-img" href="#"><img src="assets/img/company-logo-black.svg" alt="logo"></a>
-                </div>
+                <a class="logo-img" href="#"><img src="assets/img/company-logo-black.svg" alt="logo"></a>
+            </div>
         </div>
     </header>
     <div class="container colums">
@@ -33,7 +33,7 @@
                 <li><a href="#Handling">Handling text input</a></li>
             </ul>
         </aside>
-        <main>
+        <main class="main">
             <div class="chapter" id="Introduction">
                 <div class="title">
                     <h2>Introduction</h2>
