--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <li>
             <a href="11-font/index.html">Lesson 11-fonts</a>
         </li>
+        <li>
+            <a href="12-forms-style/index.html"></a>
+        </li>
     </ul>
 </body>
 </html>
