--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="11-font/index.html">Lesson 11-fonts</a>
         </li>
         <li>
-            <a href="12-forms-style/index.html"></a>
+            <a href="12-forms-style/index.html"> Lesson 12-forms-style</a>
         </li>
     </ul>
 </body>
